--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "axios": "^1.2.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
     "tailwindcss": "^3.2.4"
   },
